fix(store): avoid NPE when optional sort params are missing